--- a/SAO-EP/Src/NewAPFFormScreen1.fx.yaml
+++ b/SAO-EP/Src/NewAPFFormScreen1.fx.yaml
@@ -3,6 +3,7 @@ NewAPFFormScreen1 As screen:
 
     Container21_1 As groupContainer.horizontalAutoLayoutContainer:
         Height: =50
+        LayoutAlignItems: =LayoutAlignItems.Center
         LayoutGap: =20
         LayoutJustifyContent: =LayoutJustifyContent.Center
         LayoutMode: =LayoutMode.Auto
@@ -67,21 +68,25 @@ NewAPFFormScreen1 As screen:
             NavigationItems: =gblNavItems
 
     MainBodyCont As groupContainer.manualLayoutContainer:
-        Height: =612
+        Fill: =RGBA(0, 0, 0, 0.08)
+        Height: =598
         Width: =1364
         X: =2
         Y: =120
         ZIndex: =10
 
         Container27 As groupContainer.verticalAutoLayoutContainer:
-            Height: =587
+            DropShadow: =DropShadow.Light
+            Height: =598
             LayoutDirection: =LayoutDirection.Vertical
             LayoutMode: =LayoutMode.Auto
+            Width: =493
             ZIndex: =2
 
             NewAPF_Form_1 As form:
                 DataSource: ='APF Uploads'
                 DefaultMode: =FormMode.New
+                Fill: =RGBA(255, 255, 255, 1)
                 Height: =200
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
@@ -1327,8 +1332,7 @@ NewAPFFormScreen1 As screen:
                         Text: =If(Parent.Required, "* ") & Parent.DisplayName
                         Width: =Parent.Width - 60
                         Wrap: =false
-                        X: =30
-                        Y: =10
+                        X: =60
                         ZIndex: =92
 
                     DataCardValue25_1 As toggleSwitch:
@@ -1764,6 +1768,12 @@ NewAPFFormScreen1 As screen:
                         X: =30
                         Y: =DataCardValue33_1.Y + DataCardValue33_1.Height
                         ZIndex: =126
+
+        CalendarComponent_Mini_2 As CalendarComponent_Mini:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =598
+            X: =724
+            ZIndex: =3
 
     Runner As groupContainer.horizontalAutoLayoutContainer:
         DropShadow: =DropShadow.Semibold
